2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.addin.xml: removed old ambience reference.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.addin.xml: moved ambience extension node to project
	model.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.addin.xml: fixed 'Bug 399737 - Code completion busted
	for referenced assemblies that are not in GAC, are outside of the
	solution, and which are referenced by other non-GAC outside
	referenced assemblies'.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/EventCreationCompletionData.cs: event creation is now done with a
	stringbuilder.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/EventCreationCompletionData.cs: Worked on event handler
	completion.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/EventCreationCompletionData.cs: handled instantiated types for
	event completion.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Removed duplicate method.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 434705 - No autocomplete
	offered if not assigning result of 'new' to a variable'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed possible null reference
	exception.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Fixed 'Bug 438699 - Code completion shows
	too many options'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs: fixed setter generation in override
	completion.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 436870 - Inheriting from
	base class gives bad code completion (reopened)" 

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 432727 - No
	completion if no constructor'.
