@@ -1,5 +1,11 @@
 2008-10-28  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/CSharpTextEditorCompletion.cs:
+	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 439446 - Invoking
+	events has extra completion options'.
+
+2008-10-28  Mike Krüger  <mkrueger@novell.com>
+
 	* CSharpBinding.addin.xml: removed old ambience reference.
 
 2008-10-28  Mike Krüger  <mkrueger@novell.com>
